<resources>
    <string name="app_name">Work⏲Rest Project</string>
    <string name="time_left">mins left</string>
    <string name="StatusW">status: Working</string>
    <string name="StatusR">status: Resting</string>
    <string name="rest_time">Break time</string>
    <string name="work_time">Work time</string>
    <string name="status_null">status: Null</string>
    <string name="vibrate_on">vibrate: on </string>
    <string name="vibrate_off">vibrate: off </string>
    <string name="stop">STOP</string>
    <string name="start_cycle">Start cycle</string>
    <string name="title_activity_settings">Settings</string>

    <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adView1">ca-app-pub-9018007061294017/5839909183</string>
    <string name="adView2">ca-app-pub-9018007061294017/4502776781</string>
    <string name="adView3">ca-app-pub-9018007061294017/4985992514</string>
    <string name="adView4">ca-app-pub-9018007061294017/1429890884</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_language">Language</string>
    <string name="pref_description_language">change language</string>
    <string-array name="pref_example_list_titles">
        <item>Traditional Chinese</item>
        <item>English</item>
        <item>Simplified Chinese</item>
    </string-array>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Notifications</string>

    <string name="pref_title_ringtone">Sound</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen2">FullscreenActivity2</string>

    <string name="title_activity_pop_up_window">PopUpWindow</string>

</resources>
